[MDS-5508] Fix ESUP edit document modal overlap (#2744)
Converted DocumentCategoryForm to typescript.  Removed max-height style that was causing overlap in the esup edit documents modal.

--- a/services/core-web/src/styles/generic/layout.scss
+++ b/services/core-web/src/styles/generic/layout.scss
@@ -646,10 +646,6 @@ img.lessOpacity {
   border: 1px solid #f0f0f0;
   border-radius: 5px;
   padding: 10px;
-
-  .inputs {
-    max-height: 300px;
-  }
 }
 
 .hidden {
